tests/baselines/reference/interMixingModulesInterfaces5.errors.txt
interMixingModulesInterfaces5.ts(10,13): error TS2322: Type 'null' is not assignable to type 'number'.


==== interMixingModulesInterfaces5.ts (1 errors) ====
    module A {
    
        interface B {
            name: string;
            value: number;
        }
    
        export module B {
            export function createB(): number {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'number'.
            }
        }
    }
    
    var x: number = A.B.createB();